<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/emotionsRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginStart="45dp"
        app:layout_constraintBottom_toTopOf="@+id/editMessageDatePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/surpriseRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/surprise" />

        <RadioButton
            android:id="@+id/joyRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/joy" />

        <RadioButton
            android:id="@+id/fearRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fear" />

        <RadioButton
            android:id="@+id/loveRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/love" />

        <RadioButton
            android:id="@+id/angerRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anger" />

        <RadioButton
            android:id="@+id/sadnessRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sadness" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/editMessageConfirmButton"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editMessageConfirmButton"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="425dp" />

        <Button
            android:id="@+id/editMessageCancelButton"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editMessageCancelButton"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="425dp" />

        <Button
            android:id="@+id/editMessageDeleteButton"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editMessageDeleteButton"
            tools:layout_editor_absoluteX="238dp"
            tools:layout_editor_absoluteY="425dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/editMessageCommentView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginStart="45dp"
        android:ems="10"
        android:hint="@string/editText"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMessageDatePicker" />

    <TextView
        android:id="@+id/editMessageDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/editMessageCommentView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emotionsRadioGroup" />

</android.support.constraint.ConstraintLayout>